Updated README with new features

--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ Temporary commit content 75
 Temporary commit content 121
 Temporary commit content 122
 Temporary commit content 150
+Temporary commit content 157
